[package]
name = "unshield"
version = "0.1.0"
edition = "2018"

description = "Extract files from InstallShield Z archives."
authors = ["Aaron Griffith <aargri@gmail.com>"]
repository = "https://github.com/agrif/unshield"
documentation = "https://docs.rs/unshield"
readme = "README.md"
license = "MIT"

keywords = ["installshield", "archive"]
categories = ["compression", "encoding", "command-line-utilities", "filesystem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = ["futures-lite"]

[dependencies]
byteorder = "1.3"
explode = "0.1"
futures-lite = { version = "0.1", optional = true }

[dev-dependencies]
# can't be optional. oh well...
async-executor = { version = "0.1", default-features = false }
